# Basic_auth_fastapi_2

./: README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 2024_09_08_2328-58fbb406471e_create_users_table.py  2024_09_11_2257-af4f1ab33f21_create_users_table.py  2024_09_11_2304-1968083ef186_update_users_table.py
api/api_v1/: __init__.py  users.py
core/: config.py
core/models/: base.py  db_helper.py  user.py
core/schemas/: user.py
crud/: users.py
